Fixed spacing

--- a/common.css
+++ b/common.css
@@ -274,6 +274,5 @@ a #adish
 .win-hub-vertical .win-hub-section
 {
     display: inline-block;
-    margin-bottom: 5px;
-    margin-right: 5px;
+    margin-right: 25px;
 }
